--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,15 +1,57 @@
-.header {
-    display: table;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background: url('/img/city.jpg') no-repeat center center scroll;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+* {
+    box-sizing: border-box;
 }
 body, html {
 	height: 100%;
-    margin: 0px 0px 0px 0px;
+    margin: 0;
+    position: relative;
+    font-style: italic;
+}
+.header {
+    width: 100%;
+    padding: 15px;
+    background-color: black;
+}
+
+.bgimg {
+    background-image: url('/img/city.jpg');
+    min-height: 100%;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border: 1px solid transparent;
+}
+.button {
+     background-color: transparent; /* Green #4CAF50*/
+     border: none;
+     color: rgb(128,128,128);
+     padding: 5px 10px;
+     text-align: center;
+     text-decoration: none;
+     display: inline-block;
+     font-size: 16px;
+     margin: 4px 2px;
+     cursor: pointer;
+     -webkit-transition-duration: 0.4s; /* Safari */
+     transition-duration: 0.4s;
+     border-radius: 8px;
+ }
+.button:hover {
+    color: white;
+}
+
+.login-form {
+	text-align: right;
+}
+
+.login-form button {
+    display: inline-block;
+}
+
+.center_text {
+   color: black;
+   position: relative;
+   font-size: 2em;
+   margin-top: 200px;
+   text-align: center;
 }
